# use-case-pipelines

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_pipeline.bat  build_pipeline.sh  build_pipeline_dev.bat  build_pipeline_dev.sh  eddl.patch  install_dependencies.sh
.github/workflows/: build.yml  deps.sh
cpp/: CMakeLists.txt  DataGenerator.h  copy_ground_truth_pneumothorax.cpp  ensemble.cpp  kidney_classification.cpp  kidney_segmentation.cpp  mnist_batch.cpp  mnist_batch_faster.cpp  ms_segmentation_training.cpp  pneumothorax_segmentation.cpp  pneumothorax_segmentation_inference.cpp  pneumothorax_segmentation_training.cpp  skin_lesion_classification.cpp  skin_lesion_classification_2018.cpp  skin_lesion_classification_inference.cpp  skin_lesion_classification_training.cpp  skin_lesion_classification_training_reproducible.cpp  skin_lesion_segmentation.cpp  skin_lesion_segmentation_inference.cpp  skin_lesion_segmentation_training.cpp
cpp/data_generator/: CMakeLists.txt  data_generator.cpp  data_generator.h
cpp/metrics/: CMakeLists.txt  metrics.cpp  metrics.h
cpp/models/: CMakeLists.txt  models.cpp  models.h
cpp/utils/: CMakeLists.txt  utils.cpp  utils.h
dataset/: extract_data.sh  ms_segmentation.yml
datasets/: isic_classification.yml  isic_classification_2018.yml  isic_segmentation.yml  kidney_classification.yml  kidney_segmentation.yml  ms_segmentation.yml  pneumothorax.yml
python/: README.md  mnist_batch.py  models.py  ms_segmentation_training.py  pneumothorax_segmentation_inference.py  pneumothorax_segmentation_training.py  skin_lesion_classification.py  skin_lesion_classification_inference.py  skin_lesion_classification_training.py  skin_lesion_segmentation.py  skin_lesion_segmentation_inference.py  skin_lesion_segmentation_training.py  utils.py
pytorch/: README.md  export_segm_onnx.py  ms_segmentation.py  pyyaml_install.sh  yaml_segmentation_dataset.py
pytorch/loss/: dice.py
pytorch/models/: unet.py
pytorch/pneumothorax/: dataset.py  eval.py  losses.py  train.py
pytorch/pneumothorax/models/: PadUNet.py
pytorch/skin_lesion_classification/: README.md  dataset.py  main.py  plots.py  requirements.txt
pytorch/skin_lesion_segmentation/: README.md  dataset.py  isic_stats.py  main.py  requirements.txt
scripts/: README.md  cmake-pipeline.sh  env-vars.sh  install-ecvl-from-source.sh  install-eddl-from-source.sh  install-opencv-from-source.sh  launch_testing.sh  launch_training.sh  system_dependencies.sh
src/: CMakeLists.txt  mnist_batch.cpp  mnist_fit.cpp  pneumothorax_segmentation_inference.cpp  pneumothorax_segmentation_training.cpp  skin_lesion_classification.cpp  skin_lesion_classification_inference.cpp  skin_lesion_classification_training.cpp  skin_lesion_segmentation.cpp  skin_lesion_segmentation_inference.cpp  skin_lesion_segmentation_training.cpp
src/metrics/: metrics.cpp  metrics.h
src/models/: models.cpp  models.h
src/utils/: CMakeLists.txt  utils.cpp  utils.h
tensorflow/: README.md  dataset.py  models.py  requirements.txt  skin_lesion_classification.py  skin_lesion_classification_fit.py  utils.py
tensorflow/keras_sequence/: dataset.py  skin_lesion_classification_training.py  skin_lesion_classification_training_fit.py
